Added "cucumber-report" to generate a HTML type report of the test cases executed

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <projectName>cucumber-jvm-example</projectName>
+                            <projectName>APIFramework-ErikVerna</projectName>
                             <!-- optional, per documentation set this to "true" to bypass generation of Cucumber Reports entirely, defaults to false if not specified -->
                             <skip>false</skip>
                             <!-- output directory for the generated report -->
